# Maritime_trade_algorithm

./: .gitignore  README.md  algorithm.py  hatch.toml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  tasks.py
