[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[project]
name = "world_trade_predictor"
dynamic = ["version"]
description = "Scikit-learn based model for predicting world trade chokepoints based on satelite data and ship positions.  Deployed through a fastapi asgi server."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
{ name = "up50qyx", email = "mskben270@gmail.com" },
]
classifiers = [
    "Development Status :: 1 - Planning",  # this will get incremented, but this is really only important if we are uploading to pypi (which so far I dont think we are)
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",  # TODO: maybe remove this?? not sure pypy will work 
]